<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:background="@color/colorPrimary" />

            <TextView
                style="@style/TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/create_user_title"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:id="@+id/image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:elevation="3dp"
                    android:src="@drawable/ic_pele"
                    app:civ_border_color="@color/colorAccentLight"
                    app:civ_border_width="4dp"
                    app:civ_circle_background_color="@android:color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_container"
                android:orientation="vertical"
                android:id="@+id/form_container"
                android:paddingTop="@dimen/default_margin">

                <LinearLayout
                    android:id="@+id/choose_image_option"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/avatar"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_face_black_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:text="@string/from_avatar"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/picture"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_camera_alt_black_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:text="@string/from_camera"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:background="@color/colorLight" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_speudo"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/default_text_title_18" />

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/pseudo_ed"
                        android:layout_height="wrap_content"

                        android:theme="@style/EditTextCreateUSer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_firtname"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/default_text_title_18" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstname_ed"

                        android:theme="@style/EditTextCreateUSer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/default_text_title_18" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_ed"

                        android:theme="@style/EditTextCreateUSer" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/validate"
                android:layout_below="@+id/form_container"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                style="@style/ValidateTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/validate" />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>